--- a/app/src/main/res/layout/screen_main.xml
+++ b/app/src/main/res/layout/screen_main.xml
@@ -13,6 +13,10 @@
             type="boolean" />
 
         <variable
+            name="source"
+            type="com.kakaocorp.gallery.model.ImageSource" />
+
+        <variable
             name="vm"
             type="com.mrt.box.core.Vm" />
 
@@ -43,6 +47,28 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             goneUnless="@{onProgress}" />
+
+        <Button
+            android:id="@+id/retry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="@string/retry"
+            android:onClick='@{() -> vm.intent("com.kakaocorp.gallery.screen.MainEvent$Retry", source)}'
+            goneUnless="@{onError}" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fail_to_fetch"
+            app:layout_constraintBottom_toTopOf="@id/retry"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="8dp"
+            goneUnless="@{onError}" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
